<resources>
    <string name="app_name" translatable="false">Manager</string>
    <string name="contact_mngr">Contact Manager</string>
    <string name="button">Camera</string>
    <string name="add_button">Add</string>
    <string name="hint1">Name</string>
    <string name="hint2">Phone Number</string>
    <string name="image_path1">Image Path: %1$s</string>
    <string name="image_path2">Image Path: null</string>
    <string name="add_activity_button">Add Contact</string>
    <string name="id">Cryptographic Id</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="picture">picture</string>
    <string name="id2">Cryptographic Id: %1$s</string>
    <string name="name">Name: %1$s</string>
    <string name="phone">Phone: %1$s</string>
    <string name="search">Search</string>
    <string name="nfc" translatable="false">NFC</string>
    <string name="update">Update</string>
    <string name="sort">Sort by:</string>
    <string name="search_hint">Search name or phone number</string>
    <string name="required">Required</string>
    <string name="recents">Recently Added</string>
    <string name="just_phone">Phone</string>
    <string name="NFC_warning">Feature is currently unavailable</string>
    <string name="name_warning">Name must be longer</string>
    <string name="name_warning2">Please enter valid name</string>
    <string name="phone_warning">Phone number must be 10 digits</string>
    <string name="phone_warning2">Please enter valid phone number</string>
    <string name="input_warning">Please enter a valid name and/or phone number</string>
    <string name="add_success">Successfully added contact</string>
    <string name="edit_success">Successfully updated contact</string>
    <string name="delete_success">Successfully Deleted</string>
    <string name="delete_fail">There was a problem deleting the image</string>
    <string name="nfc2" translatable="false">NFC:</string>
    <string name="read">Read</string>
    <string name="write">Write</string>
    <string name="no_nfc">This device does not support NFC</string>
    <string name="status1">Scan a Tag</string>
    <string name="id3">Cryptographic Id: %1$s</string>
    <string name="nfc_image">NFC Image</string>
    <string name="mode1">Write Mode</string>
    <string name="mode0">Read Mode</string>
    <string name="go_to">Go To Contact</string>
    <string name="empty">null</string>
    <string name="error1">ERROR: Tag is Empty</string>
    <string name="error2">ERROR: Not an Id</string>
    <string name="success">Success</string>
    <string name="error3">ERROR: Id Not Found</string>
    <string name="tagFound">Tag Found</string>
    <string name="error0">ERROR</string>
    <string name="write_success">Write Successful</string>
    <string name="select_contact">Select a Contact</string>
    <string name="title_activity_settings">Settings</string>
    <string name="general_header">General</string>
    <string name="app_mode">Mode</string>
    <string name="mode_contacts">Contacts Mode</string>
    <string name="mode_inventory">Inventorization Mode</string>
    <string name="contact_chooser">Contact Chooser</string>
    <string name="inventory">Inventory Manager</string>
    <string name="add_item">Add Item</string>
    <string name="inventory_search">Search by name</string>
    <string name="hint3">Description</string>
    <string name="input_warning2">Please enter a valid name and/or description</string>
    <string name="add_success2">Successfully Added Item</string>
    <string name="desc_warning2">Description must be shorter</string>
    <string name="edit_success2">Successfully updated item</string>
    <string name="desc">Description</string>
    <string name="desc2">Description: %1$s</string>
    <string name="item_chooser">Item Chooser</string>
    <string name="select_item">Select an Item</string>
    <string name="goTo_item">Go To Item</string>
    <string name="show_quantity">Show Quantity on Home Page</string>
    <string name="quantity">Quantity</string>
    <string name="enable_quantity">Enable Quantity</string>
    <string name="quantity_default">Enable Quantity by Default</string>
    <string name="quantity_warning">Please enter a proper quantity</string>
    <string name="quantity_display">Quantity: %1$s</string>
    <string name="image_quality">Adjust Image Display Quality</string>
    <string name="image_quality_summary">Lower values increase performance but reduce image quality</string>
    <string name="location">Location</string>
    <string name="enable_location">Enable Location</string>
    <string name="location_default">Enable Location by Default</string>
    <string name="edit_locations">Manage Locations</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="add_location">Add Location</string>
    <string name="confirm">Confirm</string>
    <string name="location_display">Location: %1$s</string>
    <string name="location_error">Cannot Delete: Location is in Use</string>
    <string name="show_location">Show Location on Home Page</string>
    <string name="quantity_colon">Quantity:&#160;</string>
    <string name="location_colon">Location:&#160;</string>
    <string name="sheets_database">Google Sheets Database</string>
    <string name="upload_all">Upload All to Sheets</string>
    <string name="set_id">Set Sheet ID</string>
    <string name="enable_sheets">Enable Sheets Database</string>
    <string name="sheets_error1">Google Sheet Id not set</string>
    <string name="sync">Sync</string>
    <string name="syncing">Syncing items from cloud…</string>
    <string name="sync_complete">Sync Complete</string>
    <string name="enable_type">Enable Type</string>
    <string name="type_default">Enable Item Type by Default</string>
    <string name="show_type">Show Item Type on Home Page</string>
    <string name="edit_types">Manage Item Types</string>
    <string name="add_type">Add Item Type</string>
    <string name="type_display">Type: %1$s</string>
    <string name="type">Type</string>
    <string name="type_colon">Type:&#160;</string>
    <string name="type_error">Cannot Delete: Type is in Use</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="upload_confirm">Type \"Confirm\" to continue</string>
</resources>